--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
   {% include head.html %}
 
-  <body class="layout-reverse sidebar-overlay">
+  <body class="layout-reverse sidebar-overlay" class="theme-base-0d">
 
     {% include sidebar.html %}
 
