--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-us">
+  
+  {% include comments.html %
 
   {% include head.html %}
 
   <body class="layout-reverse sidebar-overlay", class="theme-base-0d">
 
     {% include sidebar.html %}
+    
+    
 
     <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
          content to avoid any CSS collisions with our real content. -->
