--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-us">
   
-  {% include comments.html %
+  {% include google_analytics.html %}
+  
+  {% include comments.html %}
 
   {% include head.html %}
 
