--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html  xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
   
-  {% include google_analytics.html %}
-  
-
 
   {% include head.html %}
 
@@ -27,6 +24,9 @@
 
       <div class="container content">
         {{ content }}
+        
+        {% include comments.html %}
+        
       </div>
     </div>
 
@@ -52,4 +52,7 @@
     
      
   </body>
+  
+  {% include google_analytics.html %}
+  
 </html>
