--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -96,7 +96,7 @@
       {% endif %}
     {% endfor %}
 
-    <a class="sidebar-nav-item" href="https://www.dropbox.com/sh/f4f1kz30awhtu8t/AADk6BUGdoCHW-fBnfiMYBOma?dl=0">Curriculum Vitae</a>
+    <a class="sidebar-nav-item" href="https://www.dropbox.com/s/6xjdji2f6ylye5z/Besaw%2C%20CV%2012.16.2015.pdf?dl=0">Curriculum Vitae</a>
     <!-- a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
     <span class="sidebar-nav-item">Currently v{{ site.version }}</span> -->
   </nav>
