--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -36,11 +36,11 @@
     {% endif %}
 </div>
 <div id="contact-list" style="text-align:center">
-    {% if site.author.goodreads %}
-      <a href="https://goodreads.com/{{ site.author.goodreads }}">
+    {% if site.author.stacko %}
+      <a href="{{ site.author.stacko }}">
         <span class="fa-stack fa-lg">
           <i class="fa fa-square-o fa-stack-2x"></i>
-          <i class="fa fa-book fa-stack-1x"></i>
+          <i class="fa fa-stack-overflow"></i>
         </span>
       </a>
     {% endif %}
