--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html  xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
   
-
-  {% include head.html %}
-  {% seo %}
+<head>
+    {% include head.html %}
+    {% seo %}
+  </head>
 
   <body class="layout-reverse sidebar-overlay", class="theme-base-0d">
 
