--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -96,7 +96,7 @@
       {% endif %}
     {% endfor %}
 
-    <a class="sidebar-nav-item" href=" cbesaw.github.io/clay, cv 11.16.2016.pdf ">Curriculum Vitae</a>
+    <a class="sidebar-nav-item" href="cbesaw.github.io/besaw, cv 08.2017.pdf">Curriculum Vitae</a>
     <!-- a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
     <span class="sidebar-nav-item">Currently v{{ site.version }}</span> -->
   </nav>
